# huffman-lzw-comparison

./: .gitignore  README.md  comparison.py  huffman.py  lzw.py  pyproject.toml  pytest.ini  ui.py
docs/: implementation.md  specification.md  testing.md  weekly-report.md
src/: __init__.py  comparison.py  huffman.py  lzw.py  ui.py
tests/: __init__.py  test_huffman.py  test_integration.py  test_lzw.py  test_performance.py
